--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
 API_ID=
 API_HASH=
-BOT_TOKEN=
-LOGGER_ID=
-MONGO_DB_URI=
-OWNER_ID=
+BOT_TOKEN=6773516626:AAGC7zqHCpyLNtq0g-3p5GZmc1p27bBxh60
+LOGGER_ID=-1002168356385
+MONGO_DB_URI=mongodb+srv://agautevdragitevsvh:pJSptT6jE0pcw9a4@cluster0.de4uc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+OWNER_ID=6634423600
 STRING_SESSION=
